--- a/front-web/package.json
+++ b/front-web/package.json
@@ -13,12 +13,13 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^3.1.2",
     "axios": "^0.21.1",
+    "joi": "^17.4.0",
     "leaflet": "^1.7.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-select": "^3.1.1",
     "react-toastify": "^6.2.0",
     "typescript": "^4.1.3",
